# SHIFT_API

./: README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 60becdb0c339_устал_жеска_зачем_то_усложнил_задачу.py  6396ff7c052d_initial.py
models/: models.py
myvenv/: pyvenv.cfg
myvenv/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
src/: config.py  database.py  main.py
src/auth/: base_config.py  manager.py  schemas.py
