[tool.poetry]
name = "salary"
version = "0.1.0"
description = ""
authors = ["Vladislav Glukhovskiy <vlad.gluhovskiy_18376@mail.ru>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.111.0"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
python-dotenv = "^1.0.1"
SQLAlchemy = "^2.0.30"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
